--- a/knowledge_sharing_session/mkdocs.yml
+++ b/knowledge_sharing_session/mkdocs.yml
@@ -1,1 +1,16 @@
 site_name: My Docs
+theme:
+  name: material
+  palette:
+    - scheme: default
+      toggle:
+        icon: material/toggle-switch-off-outline 
+        name: Switch to dark mode
+      primary: blue
+      accent: purple 
+    - scheme: slate 
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to light mode    
+      primary: black
+      accent: lime
