--- a/knowledge_sharing_session/mkdocs.yml
+++ b/knowledge_sharing_session/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: My Docs
+site_url: https://instadeep.gitlab.io/knowledgesharingsession/mkdocs
 theme:
   name: material
   palette:
@@ -14,3 +15,15 @@ theme:
         name: Switch to light mode    
       primary: black
       accent: lime
+plugins:
+  - search
+  - i18n:
+      docs_structure: suffix
+      languages:
+        - locale: en
+          default: true
+          name: English
+          build: true
+        - locale: fr
+          name: Français
+          build: true
